input overflow fixed

--- a/frontend/admin-portal/src/components/headers/authHeader/AuthHeader.module.css
+++ b/frontend/admin-portal/src/components/headers/authHeader/AuthHeader.module.css
@@ -1,7 +1,7 @@
 .authHeader {
   width: 50vw;
   height: 100vh;
-  background-color: var(--black-color);
+  background-color: black;
   color: var(--white-color);
 }
 
