--- a/frontend/admin-portal/src/components/inputs/textInput/TextInput.module.css
+++ b/frontend/admin-portal/src/components/inputs/textInput/TextInput.module.css
@@ -1,9 +1,10 @@
 .textInput {
-  height: 20px;
-  padding: 5px 10px 5px 10px;
+  padding: 5px 10px;
   border-radius: 5px;
   border: 1px solid var(--border-color);
   font-size: 15px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .textInput:focus {
