--- a/frontend/admin-portal/src/pages/authPages/signUpPage/SignUp.module.css
+++ b/frontend/admin-portal/src/pages/authPages/signUpPage/SignUp.module.css
@@ -25,6 +25,12 @@
   padding: 5vmin;
 }
 
+.names {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
 @media (max-width: 767px) {
   .signUpPage {
     display: flex;
